--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1111,9 +1111,9 @@ section.lazy-placeholder:after {
   color: #767676 !important;
 }
 .cid-u2WMo93hsw {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
+  padding-top: 135px;
+  padding-bottom: 135px;
+  background-color: #ffffff;
 }
 .cid-u2WMo93hsw P {
   color: #767676;
@@ -1581,6 +1581,27 @@ section.lazy-placeholder:after {
 .cid-u2WMe1gHRN .nav-link:hover,
 .cid-u2WMe1gHRN .dropdown-item:hover {
   color: #767676 !important;
+}
+.cid-u3qkAYF3AR {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-u3qkAYF3AR .title {
+  margin-bottom: 2rem;
+}
+.cid-u3qkAYF3AR .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-u3qkAYF3AR a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-u3qkAYF3AR a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-u3qkAYF3AR textarea.form-control {
+  min-height: 188px;
 }
 .cid-u2WOfAWDIi {
   padding-top: 75px;
@@ -2114,43 +2135,13 @@ section.lazy-placeholder:after {
 .cid-u2WMe1gHRN .dropdown-item:hover {
   color: #767676 !important;
 }
-.cid-u2WWZy9DyA {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-u3qkgq5fbG {
+  padding-top: 75px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-u2WWZy9DyA .card {
-  align-self: stretch;
-}
-.cid-u2WWZy9DyA .card-box {
-  height: 100%;
-  background-color: #ffffff;
-  padding: 2rem;
-}
-.cid-u2WWZy9DyA h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-u2WWZy9DyA p {
+.cid-u3qkgq5fbG .mbr-section-subtitle {
   color: #767676;
-  text-align: left;
-}
-.cid-u2WWZy9DyA .card-wrapper {
-  position: relative;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-u2WWZy9DyA .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-.cid-u2WWZy9DyA .card-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
 }
 .cid-u2WXfXhSMc {
   padding-top: 90px;
@@ -2184,6 +2175,44 @@ section.lazy-placeholder:after {
   transition: box-shadow 0.3s;
 }
 .cid-u2WXfXhSMc .card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+}
+.cid-u2WWZy9DyA {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-u2WWZy9DyA .card {
+  align-self: stretch;
+}
+.cid-u2WWZy9DyA .card-box {
+  height: 100%;
+  background-color: #ffffff;
+  padding: 2rem;
+}
+.cid-u2WWZy9DyA h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-u2WWZy9DyA p {
+  color: #767676;
+  text-align: left;
+}
+.cid-u2WWZy9DyA .card-wrapper {
+  position: relative;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-u2WWZy9DyA .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-u2WWZy9DyA .card-img {
   position: absolute;
   top: 0;
   left: 0;
